--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -22,6 +22,7 @@
         </ion-col>
         <ion-col class="ion-text-right">
           <ion-button
+            *ngIf="permissionState.sales_invoice.create"
             color="tertiary"
             [routerLink]="['/sales/add-sales-invoice', 'add']"
           >
