feat(excel-rma): Add name/ID to stock entries
added a buton to open all stock entries for any stock transfer

updated source/target warehouse list to show all warehouses

--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -114,6 +114,16 @@
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
 
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef>
+            Name
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            {{ (row.names && row.names.length) ? row.names[0] : '' }}
+          </mat-cell>
+          <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+        </ng-container>
+
         <ng-container matColumnDef="s_warehouse">
           <mat-header-cell *matHeaderCellDef>
             From Warehouse
