--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -266,6 +266,11 @@
             </ion-text>
           </ion-card-title>
         </ion-col>
+        <ion-col class="ion-text-right">
+          <ion-button *ngIf="readonly" [disabled]="!stock_receipt_names[0]" (click)="openStockEntries()" fill="clear" shape="round">
+            Open All Entries
+          </ion-button>
+        </ion-col>
       </ion-row>
     </ion-card-header>
 
