feat(rma-server): Add filter to stock entry
UI changes for single stock entry page

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -213,7 +213,7 @@
           </ion-menu-toggle>
           <ion-menu-toggle auto-hide="false">
             <ion-item
-              *ngIf="loggedIn && permissionState?.job?.active"
+              *ngIf="loggedIn && permissionState?.jobs?.active"
               routerLink="/jobs"
               lines="none"
               routerLinkActive="active"
