--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -230,6 +230,9 @@
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
+        <section class="ion-text-right">
+          <mat-checkbox class="example-margin" (ngModelChange)="setFilter($event)" [(ngModel)]="group">In Group</mat-checkbox>
+        </section>
       </div>
       <table
         mat-table
@@ -256,7 +259,13 @@
         <!-- Warehouse Column -->
         <ng-container matColumnDef="warehouse">
           <th mat-header-cell *matHeaderCellDef>Warehouse</th>
-          <td mat-cell *matCellDef="let row">{{row.warehouse}}</td>
+          <td mat-cell *matCellDef="let row">
+            <mat-chip-list  aria-label="Fish selection">
+              <mat-chip *ngFor="let warehouse of getChips(row.warehouse)" color="primary" selected>
+                {{warehouse}}
+              </mat-chip>
+            </mat-chip-list>
+          </td>
         </ng-container>
 
         <tr
