--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -1,4 +1,189 @@
+<form [formGroup]="statusHistoryForm">
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="align">
+        <ion-col>
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Details
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-right" size="auto">
+          <ion-button
+            color="tertiary"
+            fill="outline"
+            matTooltip=" ( ctrl + i ) "
+            matTooltipPosition="above"
+            matTooltipClass="tooltip"
+            (ctrlI)="addStatusHistory()"
+            (click)="addStatusHistory()"
+            [disabled]="statusHistoryForm.invalid"
+          >
+            Add
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid class="i-no-padding">
+        <ion-row class="align">
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                type="text"
+                required
+                placeholder="Status from"
+                formControlName="status_from"
+                [matAutocomplete]="recievingBranch"
+              />
+              <mat-autocomplete
+                autoActiveFirstOption
+                #recievingBranch="matAutocomplete"
+                [displayWith]="getBranchOption"
+                (optionSelected)="branchOptionChanged($event.option.value)"
+              >
+                <mat-option
+                  *ngFor="let option of territoryList | async"
+                  [value]="option"
+                >
+                  {{ option.name }}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="f.status_from.hasError('required')">
+                Status from is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                type="text"
+                required
+                placeholder="Transfer branch"
+                formControlName="transfer_branch"
+                [matAutocomplete]="deliveryBranch"
+              />
+              <mat-autocomplete
+                autoActiveFirstOption
+                #deliveryBranch="matAutocomplete"
+                [displayWith]="getBranchOption"
+                (optionSelected)="branchOptionChanged($event.option.value)"
+              >
+                <mat-option
+                  *ngFor="let option of territoryList | async"
+                  [value]="option"
+                >
+                  {{ option.name }}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="f.transfer_branch.hasError('required')">
+                Transfer Branch is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+        <ion-row class="align">
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                type="text"
+                required
+                placeholder="Curent Status / Verdict"
+                formControlName="current_status_verdict"
+                [matAutocomplete]="currentState"
+              />
+              <mat-autocomplete
+                autoActiveFirstOption
+                #currentState="matAutocomplete"
+                [displayWith]="getCurrentStatus"
+              >
+                <mat-option
+                  *ngFor="let option of currentStatus"
+                  [value]="option"
+                >
+                  {{ option }}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="f.current_status_verdict.hasError('required')">
+                Current Status is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                type="text"
+                required
+                placeholder="Delivery Status"
+                formControlName="delivery_status"
+                [matAutocomplete]="deliveryState"
+              />
+              <mat-autocomplete
+                autoActiveFirstOption
+                #deliveryState="matAutocomplete"
+                [displayWith]="getCurrentStatus"
+                (optionSelected)="branchOptionChanged($event.option.value)"
+              >
+                <mat-option
+                  *ngFor="let option of deliveryStatus"
+                  [value]="option"
+                >
+                  {{ option }}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-error *ngIf="f.delivery_status.hasError('required')">
+                Delivery Status is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                required
+                [matDatepicker]="posting_date"
+                placeholder="Posting Date"
+                formControlName="posting_date"
+                (dateChange)="selectedPostingDate($event)"
+              />
+              <mat-datepicker-toggle
+                matSuffix
+                [for]="posting_date"
+              ></mat-datepicker-toggle>
+              <mat-datepicker #posting_date disabled="false"></mat-datepicker>
+              <mat-error *ngIf="f.posting_date.hasError('required')">
+                Posting Date is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                type="text"
+                required
+                placeholder="Description"
+                formControlName="description"
+              />
+              <mat-error *ngIf="f.description.hasError('required')">
+                Description is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+</form>
 <!-- 1 this is for list -->
+
 <ion-card>
   <ion-card-header>
     <ion-grid>
@@ -123,6 +308,7 @@
     </mat-table>
   </ion-card-content>
 </ion-card>
+
 <!-- 2.If status "Repaired" is selected this table appears -->
 <ion-card>
   <ion-card-header>
