feat(rma-frontend):Fixed Changes

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -316,7 +316,7 @@
 <ion-card
   *ngIf="
     (warrantyObject?.status_history)[warrantyObject?.status_history.length - 1]
-      .delivery_status.length > 0
+      .delivery_status.length
   "
 >
   <ion-card-header>
