--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
@@ -21,7 +21,7 @@
           <ion-label>Details</ion-label>
         </ion-segment-button>
         <ion-segment-button value="1">
-          <ion-label>Serials</ion-label>
+          <ion-label>Service Invoice</ion-label>
         </ion-segment-button>
         <ion-segment-button value="2">
           <ion-label>Status</ion-label>
