feat(excel-rma): Update data import and csv template
updated queue retry logic

updated error and failure message on single job

--- a/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
+++ b/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
@@ -7,12 +7,12 @@
           <ion-col size="6">
             <ion-row>
               <ion-col size="12">
-                Status : <ion-text color="primary"> {{ exportedJob?.data?.status }} </ion-text>
+                Status : <ion-text color="primary"> {{ exportedJob?.data?.status || data?.data?.status }} </ion-text>
               </ion-col>
             </ion-row>
             <ion-row>
               <ion-col size="12">
-                Parent : <ion-text color="primary"> {{ exportedJob?.data?.parent }} </ion-text>
+                Parent : <ion-text color="primary"> {{ exportedJob?.data?.parent || data?.data?.parent}} </ion-text>
               </ion-col>
             </ion-row>
           </ion-col>
