--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -250,7 +250,7 @@
             time
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{( row.posting_time )}}
+            {{( getStringTime(row.posting_time) | date:'mediumTime' )}}
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
