feat(rma-frontned): Merge items together for same item
Manual/Individual assigned serials are creating Single Stock Entry for each serial . Ref: TRO-00336

--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/add-item-dialog.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/add-item-dialog.html
@@ -17,7 +17,7 @@
         *ngFor="let option of filteredItemList | async"
         [value]="option"
       >
-        {{ option.item_name }} ( {{ option.item_code }} )
+        {{ option.item_name }}
       </mat-option>
     </mat-autocomplete>
     </mat-form-field>
